--- a/index.html
+++ b/index.html
@@ -16,48 +16,54 @@
 <body>
 
     <main id="app">
-        <section id="dashboard-orcamento" class="dashboard-tela ativo">
-            <h2 class="titulo-tela"><i class="fa-solid fa-chart-pie"></i> Orçamento Anual</h2>
+        <section id="dashboard-custos-fixos" class="dashboard-tela ativo">
+            <h2 class="titulo-tela"><i class="fa-solid fa-file-invoice-dollar"></i> Custos Fixos - Análise Anual e Mensal</h2>
             
             <div class="conteudo-tela">
                 <div class="cards-resumo">
                     <div class="card">
-                        <h3>Total Orçado</h3>
-                        <p id="total-orcado">R$ 0,00</p>
+                        <h3>Custo Anual Total (2025)</h3>
+                        <p id="custo-anual-total">R$ 0,00</p>
                     </div>
                     <div class="card">
-                        <h3>Total Gasto</h3>
-                        <p id="total-gasto">R$ 0,00</p>
+                        <h3>Custo Mês Atual (Julho)</h3>
+                        <p id="custo-mes-atual">R$ 0,00</p>
                     </div>
                     <div class="card">
-                        <h3>% de Execução</h3>
-                        <p id="percentual-execucao">0%</p>
+                        <h3>Custo Médio Mensal</h3>
+                        <p id="custo-medio-mensal">R$ 0,00</p>
                     </div>
                 </div>
-                <div class="grafico-container">
-                    <canvas id="graficoOrcamento"></canvas>
+                
+                <div class="graficos-container">
+                    <div class="grafico-wrapper">
+                        <h4>Total Gasto por Empresa (Anual)</h4>
+                        <div class="grafico-canvas-container">
+                            <canvas id="graficoAnualEmpresas"></canvas>
+                        </div>
+                    </div>
+                    <div class="grafico-wrapper">
+                        <h4>Evolução dos Custos Mensais (Anual)</h4>
+                        <div class="grafico-canvas-container">
+                            <canvas id="graficoEvolucaoMensal"></canvas>
+                        </div>
+                    </div>
                 </div>
+            </div>
+        </section>
+
+        <section id="dashboard-orcamento" class="dashboard-tela">
+            <h2 class="titulo-tela"><i class="fa-solid fa-chart-pie"></i> Orçamento Anual por Diretoria</h2>
+            <div class="conteudo-tela">
+                <p>Painel de Orçamento por Diretoria em construção.</p>
             </div>
         </section>
 
         <section id="dashboard-contratos" class="dashboard-tela">
-            <h2 class="titulo-tela"><i class="fa-solid fa-file-signature"></i> Controle de Contratos e Convênios</h2>
-
+            <h2 class="titulo-tela"><i class="fa-solid fa-car"></i> Controle de frota</h2>
             <div class="conteudo-tela">
-                <h3>Próximos Vencimentos</h3>
-                <div id="lista-contratos">
-                    </div>
+                 <p>Painel de Controle de Contratos em construção.</p>
             </div>
-        </section>
-
-        <section id="dashboard-veiculos" class="dashboard-tela">
-            <h2 class="titulo-tela"><i class="fa-solid fa-car"></i> Controle de Frota</h2>
-
-            <div class="conteudo-tela">
-                <h3>Alertas da Frota</h3>
-                <div id="lista-multas">
-                    </div>
-                </div>
         </section>
     </main>
 
