--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </section>
 
         <section id="dashboard-contratos" class="dashboard-tela">
-            <h2 class="titulo-tela"><i class="fa-solid fa-file-signature"></i> Controle de Contratos e Convênios</h2>
+            <h2 class="titulo-tela"><i class="fa-solid fa-file-signature"></i> Controle de Frota</h2>
             <div class="conteudo-tela">
                 </div>
         </section>
