hoje alterei os graficos para pizza do lado esquerdo e comparar os gastos das 5 empresas com maiores gastos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<ht lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,19 +33,19 @@
                 </div>
                 
                 <div class="graficos-container">
-                    <div class="grafico-wrapper">
-                        <h4>Total Gasto por Empresa (Anual)</h4>
-                        <div class="grafico-canvas-container">
-                            <canvas id="graficoAnualEmpresas"></canvas>
-                        </div>
-                    </div>
-                    <div class="grafico-wrapper">
-                        <h4>Evolução dos Custos Mensais (Anual)</h4>
-                        <div class="grafico-canvas-container">
-                            <canvas id="graficoEvolucaoMensal"></canvas>
-                        </div>
-                    </div>
-                </div>
+    <div class="grafico-wrapper">
+        <h4>Gasto Anual por Empresa (%)</h4>
+        <div class="grafico-canvas-container">
+            <canvas id="graficoAnualEmpresas"></canvas>
+        </div>
+    </div>
+    <div class="grafico-wrapper">
+        <h4>Maiores Custos (Anual)</h4>
+        <div class="grafico-canvas-container">
+            <canvas id="graficoEvolucaoMensal"></canvas>
+        </div>
+    </div>
+</div>
             </div>
         </section>
 
