resolvendo bug da data

--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
             <div class="conteudo-tela">
 
                 <div class="cards-resumo">
-                    <div class="card">
-                        <h3>Custo Anual Total (2025)</h3>
+                    <div class="card" id="custo-anual-total-card">
+                        <h3>Custo Anual Total</h3>
                         <p id="custo-anual-total">R$ 0,00</p>
                     </div>
 
                     <div class="card" id="custo-mes-atual-card">
-                        <h3>Custo Mês Atual</h3> <p id="custo-mes-atual">R$ 0,00</p>
+                        <h3>Custo Mês Atual</h3>
+                        <p id="custo-mes-atual">R$ 0,00</p>
                     </div>
                     
                     <div class="card">
@@ -44,7 +45,7 @@
                         </div>
                     </div>
                     <div class="grafico-wrapper">
-                        <h4> Maiores Custos (Anual)</h4>
+                        <h4>Top 5 Maiores Custos (Anual)</h4>
                         <div class="grafico-canvas-container">
                             <canvas id="graficoEvolucaoMensal"></canvas>
                         </div>
