--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </div>
                     </div>
                     <div class="grafico-wrapper">
-                        <h4>Top 5 Maiores Custos (Anual)</h4>
+                        <h4> Maiores Custos (Anual)</h4>
                         <div class="grafico-canvas-container">
                             <canvas id="graficoEvolucaoMensal"></canvas>
                         </div>
