Filtros concluidos; bug de cores das empresas concuido,logica de filtro concluido

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                             <canvas id="graficoAnualEmpresas"></canvas>
                         </div>
                     </div>
-                    <div class="grafico-wrapper">
-                        <h4>Maiores Custos (Anual)</h4>
-                        <div class="grafico-canvas-container">
+                    <div class="grafico-wrapper" id="wrapper-direita">
+                        <h4 id="titulo-wrapper-direita">Maiores Custos (Anual)</h4>
+                        <div class="grafico-canvas-container" id="container-direita">
                             <canvas id="graficoEvolucaoMensal"></canvas>
                         </div>
                     </div>
