bugs controle de frota corrigidos, valores corretos, diretoria aparecendo corretamente; incluir fotos dos veiculos e adicionar filtros de dados dos veiculos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="grafico-wrapper" id="wrapper-direita">
-                        <h4 id="titulo-wrapper-direita">Top 5 Custos na Seleção</h4>
+                        <h4 id="titulo-wrapper-direita">Maiores 5 Custos na Seleção</h4>
                         <div class="grafico-canvas-container" id="container-direita">
                             <canvas id="graficoEvolucaoMensal"></canvas>
                         </div>
@@ -96,15 +96,16 @@
                 <div class="frota-grid" id="frota-grid"></div>
 
                 <div class="frota-detalhes" id="frota-detalhes">
-                <button id="fechar-detalhes-frota">X</button>
-                <h3 id="detalhe-modelo">Modelo do Veículo</h3>
-                <ul>
-                    <li><strong>Placa:</strong> <span id="detalhe-placa"></span></li>
-                    <li><strong>Chassi:</strong> <span id="detalhe-chassi"></span></li>
-                    <li><strong>Diretoria:</strong> <span id="detalhe-diretoria"></span></li>
-                    <li><strong>Renavam:</strong> <span id="detalhe-renavam"></span></li>
-                    <li><strong>Revisão:</strong> <span id="detalhe-revisao"></span></li>
-                </ul>       
+                    <button id="fechar-detalhes-frota">X</button>
+                    <h3 id="detalhe-modelo">Modelo do Veículo</h3>
+                    <ul>
+                        <li><strong>Placa:</strong> <span id="detalhe-placa"></span></li>
+                        <li><strong>Chassi:</strong> <span id="detalhe-chassi"></span></li>
+                        <li><strong>Diretoria:</strong> <span id="detalhe-diretoria"></span></li>
+                        <li><strong>Renavam:</strong> <span id="detalhe-renavam"></span></li>
+                        <li><strong>Revisão:</strong> <span id="detalhe-revisao"></span></li>
+                    </ul>
+                </div>
             </div>
         </section>
     </main>
