resolver bug dados cartão e manutenção

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
                         <li><strong>Diretoria:</strong> <span id="detalhe-diretoria"></span></li>
                         <li><strong>Renavam:</strong> <span id="detalhe-renavam"></span></li>
                         <li><strong>Revisão:</strong> <span id="detalhe-revisao"></span></li>
-                        <li><strong>Cartão:</strong> <span id="detalhe-cartao"></span></li> 
+                        <li><strong>Cartão:</strong> <span id="detalhe-cartao"></span></li>
+                        <li><strong>Multas:</strong> <span id="detalhe-multas"></span></li>
+                        <li><strong>Manutenção:</strong> <span id="detalhe-manutencao"></span></li>
                     </ul>
                 </div>
             </div>
