--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         <li><strong>Renavam:</strong> <span id="detalhe-renavam"></span></li>
                         <li><strong>Revisão:</strong> <span id="detalhe-revisao"></span></li>
                         <li><strong>Cartão:</strong> <span id="detalhe-cartao"></span></li>
-                        <li><strong>Multas:</strong> <span id="detalhe-multas"></span></li>
-                        <li><strong>Manutenção:</strong> <span id="detalhe-manutencao"></span></li>
+                        <li id="item-multas" style="display: none;"><strong>Multas:</strong> <span id="detalhe-multas"></span></li>
+                        <li id="item-manutencao" style="display: none;"><strong>Manutenção:</strong> <span id="detalhe-manutencao"></span></li>
                     </ul>
                 </div>
             </div>
