Adicionando dados a tela de Controle de Contratos

--- a/index.html
+++ b/index.html
@@ -70,6 +70,36 @@
             </div>
         </section>
 
+        <section id="dashboard-contratos" class="dashboard-tela">
+            <h2 class="titulo-tela"><i class="fa-solid fa-file-signature"></i> Controle de Contratos</h2>
+            <div class="conteudo-tela">
+                <div class="contratos-grid" id="contratos-grid">
+                    </div>
+                <div class="contrato-detalhes" id="contrato-detalhes">
+                    <button id="fechar-detalhes-contrato">X</button>
+                    <h3 id="detalhe-contrato-empresa">Nome da Empresa</h3>
+                    <ul>
+                        <li><strong>Gestor:</strong> <span id="detalhe-contrato-gestor"></span></li>
+                        <li><strong>Fiscal:</strong> <span id="detalhe-contrato-fiscal"></span></li>
+                        <li><strong>Suplente:</strong> <span id="detalhe-contrato-suplente"></span></li>
+                        <li><strong>CNPJ:</strong> <span id="detalhe-contrato-cnpj"></span></li>
+                        <li><strong>Processo Raiz:</strong> <span id="detalhe-contrato-processo-raiz"></span></li>
+                        <li><strong>Processo Fiscalização:</strong> <span id="detalhe-contrato-processo-fiscalizacao"></span></li>
+                        <hr>
+                        <li><strong>Vigência:</strong> <span id="detalhe-contrato-vigencia"></span></li>
+                        <li><strong>1ª Prorrogação:</strong> <span id="detalhe-contrato-prorrogacao1"></span></li>
+                        <li><strong>2ª Prorrogação:</strong> <span id="detalhe-contrato-prorrogacao2"></span></li>
+                        <li><strong>1ª Repactuação:</strong> <span id="detalhe-contrato-repactuacao1"></span></li>
+                        <li><strong>2ª Repactuação:</strong> <span id="detalhe-contrato-repactuacao2"></span></li>
+                        <hr>
+                        <li><strong>Responsável (Contratada):</strong> <span id="detalhe-contrato-responsavel"></span></li>
+                        <li><strong>Email:</strong> <span id="detalhe-contrato-email"></span></li>
+                        <li><strong>Telefone:</strong> <span id="detalhe-contrato-telefone"></span></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <section id="dashboard-frota" class="dashboard-tela">
             <h2 class="titulo-tela"><i class="fa-solid fa-car"></i> Controle de Frota</h2>
             <div class="conteudo-tela">
@@ -118,8 +148,6 @@
                     </div>
                     <button id="botao-filtrar-desempenho">Analisar</button>
                 </div>
-                
-<!---- Resumo Desempenho ---->
 
                 <div class="cards-resumo" id="cards-resumo-desempenho">
                     <div class="card">
