feat(frota): Unifica links de multas e manutenção em um único link de processo

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
                         <li><strong>Renavam:</strong> <span id="detalhe-renavam"></span></li>
                         <li><strong>Revisão:</strong> <span id="detalhe-revisao"></span></li>
                         <li><strong>Cartão:</strong> <span id="detalhe-cartao"></span></li>
-                        <li id="item-multas" style="display: none;"><strong>Multas:</strong> <span id="detalhe-multas"></span></li>
-                        <li id="item-manutencao" style="display: none;"><strong>Manutenção:</strong> <span id="detalhe-manutencao"></span></li>
+                        <li id="item-processo" style="display: none;"><strong>Processo SEI:</strong> <span id="detalhe-processo"></span></li>
                     </ul>
                 </div>
             </div>
