Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
     <h2 class="titulo-tela"><i class="fa-solid fa-file-signature"></i> Controle de Contratos</h2>
     <div class="conteudo-tela-contratos">
         
+        <div class="filtro-item" style="margin-bottom: 20px;">
+            <label for="filtro-contrato-empresa">Selecionar Empresa:</label>
+            <select id="filtro-contrato-empresa"></select>
+        </div>
+
         <div class="slider-container">
             <div class="slider-track" id="contratos-slider-track">
                 </div>
